melhorias feitas e novos ajustes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     </head>
     <body style="font-family: Arial;">
         <h1>Sistema de cadastro</h1>
-        <a href="usuario.js">Adicionar usuario</a>
+        <a href="usuario.html">Adicionar usuario</a>
         <br/>
         <br/>
         <table border="1" style="border-collapse: collapse;width:800px">
